fixing slideshow image overflow

--- a/index.css
+++ b/index.css
@@ -99,7 +99,6 @@ td {
   position: relative;
   width: 100%;
   max-width: 800px;
-  height:100px;
   margin: auto;
 }
 
@@ -110,7 +109,9 @@ td {
 
 .slide img {
   width: 100%;
-  height: 600px;
+  height: auto;
+  max-width: 100%;
+  max-height: 100%;  
   object-fit: cover;
 }
 
